# Linux_Mining_Bot

./: CMakeLists.txt  INSTALL  LICENSE  README.md
Doku/: XmrigNvidiaApi.json  checkstate.json  config.json  getsettings.json  settings.json
cg/: fan_all.sh  hashdone.sh  oc_all.sh
cg/config/: start.sh  startcpu.sh
src/: data.cpp  data.h  defines.h  helper.cpp  helper.h  main.cpp  minerapi.cpp  minerapi.h  ngui.cpp  ngui.h
